add missing valid field type `multi-choice`

--- a/requests/Internal.yaml
+++ b/requests/Internal.yaml
@@ -149,6 +149,7 @@ MembershipTypeExtrasAdditionalField:
             - checkbox
             - date
             - email
+            - multi-choice
             - number
             - person_record
             - select
