--- a/toc.yaml
+++ b/toc.yaml
@@ -455,7 +455,14 @@ paths:
   /segments/v2/{bucket}/segment/{uid}/all/sync_mailchimp:
     $ref: 'requests/Segments.yaml#/SegmentAllSyncMailchimp'
 
+  /segments/v2/{bucket}/fieldset:
+    $ref: 'requests/Fieldset.yaml#/Fieldset'
 
+  # /segments/v2/{bucket}/fieldset/resource:
+  #   $ref: 'requests/Fieldset.yaml#/FieldsetResource'
+
+  # /segments/v2/{bucket}/fieldset/{uid}:
+  #   $ref: 'requests/Fieldset.yaml#/FieldsetSingle'
 
   #
   # - - - - = - - - - = - - - - = - - - - = - - - - = - - - - = - - - - = - - - - =
