adding eventbrite pull events

--- a/requests/Internal.yaml
+++ b/requests/Internal.yaml
@@ -21,6 +21,7 @@ PartnerSync:
           type: string
           enum:
             - clio
+            - eventbrite
             - gocardless
             - mailchimp
             - mryum
@@ -42,6 +43,7 @@ PartnerSync:
           enum:
             - contacts
             - consents
+            - events
             - payments
         description: The data type to sync e.g. contacts, payments
       - name: since_hours
@@ -341,6 +343,8 @@ CreateUserPolicy:
     summary: Create new composite user policy
     description: |
       Create a composite user policy from a set of standard policies
+      For example create a team leader policy `user_type=team-leader`
+      and assign a set of policies to it `policies=base,group,team-leader`
     tags:
       - Internal
       - User Policy
