--- a/requests/Notifications.yaml
+++ b/requests/Notifications.yaml
@@ -29,6 +29,7 @@ Notifications:
       '401':
         description: Authentication error
 
+
 NotificationsSingle:
   get:
     operationId: getSingleNotifications
@@ -64,6 +65,37 @@ NotificationsSnooze:
       $ref: 'shared.yaml#/parameters/split_uri'
     responses:
       $ref: 'shared.yaml#/responses/standard'
+
+NotificationsReadAll:
+  put:
+    operationId: readAllNotifications
+    summary: Notifications - mark all as read
+    description: Mark all notifications as read (where all = page size)
+    tags:
+      - Notifications
+    parameters:
+      - name: bucket
+        in: path
+        required: true
+        schema:
+          $ref: 'shared.yaml#/schemas/bucket'
+      - name: page_size
+        in: query
+        required: false
+        schema:
+          type: integer
+          default: 7
+    responses:
+      '200':
+        description: A list of resource records matching the search terms
+        content:
+          application/json:
+            schema:
+              $ref: '#/responses/putNotificationsReadAll'
+      '400':
+        description: a standard error message
+      '401':
+        description: Authentication error
 
 responses:
   getNotifications:
@@ -137,3 +169,14 @@ responses:
               policy_name:
                 type: string
 
+
+  putNotificationsReadAll:
+    description: Successful operation - a summary of notifications
+    type: object
+    properties:
+      read_count:
+        type: integer
+      remaining:
+        type: integer
+      total:
+        type: integer
