trying decoupled docs

--- a/toc.yaml
+++ b/toc.yaml
@@ -28,6 +28,24 @@ servers:
 #   - bearerAuth: []         # use the same name as above
 
 paths:
+  # Notifications API endpoints
+  /notifications/v2/{bucket}/tasks:
+    $ref: 'https://sls-api-dev.sheepcrm.com/notifications/openapi.yml#/paths/~1tasks'
+
+  /notifications/v2/{bucket}/tasks/all:
+    $ref: 'https://sls-api-dev.sheepcrm.com/notifications/openapi.yml#/paths/~1tasks~1all'
+
+  /notifications/v2/{bucket}/task/{uid}:
+    $ref: 'https://sls-api-dev.sheepcrm.com/notifications/openapi.yml#/paths/~1task~1{uid}'
+
+  /notifications/v2/{bucket}/notifications:
+    $ref: 'https://sls-api-dev.sheepcrm.com/notifications/openapi.yml#/paths/~1notifications'
+
+  /notifications/v2/{bucket}/notifications/all:
+    $ref: 'https://sls-api-dev.sheepcrm.com/notifications/openapi.yml#/paths/~1notifications~1all'
+
+  /notifications/v2/{bucket}/notifications/read:
+    $ref: 'https://sls-api-dev.sheepcrm.com/notifications/openapi.yml#/paths/~1notifications~1read'
 
   /api/v2/{bucket}/{resource_type}/{uid}/avatar:
     $ref: 'requests/Core.yaml#/Avatar'
@@ -391,42 +409,7 @@ paths:
   /invoices/v2/{bucket}/{invoice_type}/{uid}/{signature}:
     $ref: 'requests/Invoices.yaml#/InvoiceSingleWithSignature'
 
-  #
-  # Notifications
-  #
 
-  /notifications/v2/{bucket}:
-    $ref: 'requests/Notifications.yaml#/Notifications'
-
-  /notifications/v2/{bucket}/notifications/read:
-    $ref: 'requests/Notifications.yaml#/NotificationsReadAll'
-
-  /notifications/v2/{bucket}/{resource_type}/{uid}:
-    $ref: 'requests/Notifications.yaml#/NotificationsSingle'
-
-
-
-  #
-  # Tasks
-  #
-
-  /notifications/v2/{bucket}/tasks:
-    $ref: 'requests/Tasks.yaml#/Tasks'
-
-  /notifications/v2/{bucket}/tasks/all:
-    $ref: 'requests/Tasks.yaml#/Tasks'
-
-  /notifications/v2/{bucket}/task/{uid}:
-    $ref: 'requests/Tasks.yaml#/TaskSingle'
-
-  /notifications/v2/{bucket}/task/{uid}/complete:
-    $ref: 'requests/Tasks.yaml#/TaskComplete'
-
-  /notifications/v2/{bucket}/task/{uid}/snooze:
-    $ref: 'requests/Tasks.yaml#/TaskSnooze'
-
-  /notifications/v2/{bucket}/task/{uid}/uncomplete:
-    $ref: 'requests/Tasks.yaml#/TaskUnComplete'
 
   #
   # Search
@@ -524,3 +507,15 @@ paths:
 
   /public/v2/{bucket}/web:
     $ref: 'requests/SelfservicePublic.yaml#/Web'
+
+components:
+  schemas:
+    # Notifications API schemas
+    TaskList:
+      $ref: 'https://sls-api-dev.sheepcrm.com/notifications/openapi.yml#/components/schemas/TaskList'
+    Task:
+      $ref: 'https://sls-api-dev.sheepcrm.com/notifications/openapi.yml#/components/schemas/Task'
+    NotificationList:
+      $ref: 'https://sls-api-dev.sheepcrm.com/notifications/openapi.yml#/components/schemas/NotificationList'
+    Notification:
+      $ref: 'https://sls-api-dev.sheepcrm.com/notifications/openapi.yml#/components/schemas/Notification'
