documenting segment delete

--- a/requests/Audit.yaml
+++ b/requests/Audit.yaml
@@ -21,6 +21,12 @@ Audit:
         schema:
           type: integer
           default: 250
+      - name: skip
+        in: query
+        required: false
+        schema:
+          type: integer
+          default: 0
       - name: from
         in: query
         required: false
