--- a/requests/Segments.yaml
+++ b/requests/Segments.yaml
@@ -797,6 +797,212 @@ SegmentAllSyncMailchimp:
       '401':
         description: Authentication error
 
+SegmentTrees:
+  get:
+    operationId: segmentTrees
+    summary: Segments - Get segment tree structure
+    description: |
+      Returns the hierarchical tree structure of segments.
+    tags:
+      - Segments
+    parameters:
+      - name: bucket
+        in: path
+        required: true
+        schema:
+          $ref: 'shared.yaml#/schemas/bucket'
+    responses:
+      '200':
+        description: |
+          The segment tree structure
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                segments:
+                  type: array
+                  items:
+                    $ref: '#/responses/single_segment'
+      '400':
+        description: Bad request error
+        content:
+          application/json:
+            schema:
+              $ref: 'shared.yaml#/responses/error'
+      '401':
+        description: Authentication error
+
+SegmentViewContext:
+  get:
+    operationId: segmentViewContext
+    summary: Segments - Get segments by view context
+    description: |
+      Returns segments filtered by a specific view context.
+    tags:
+      - Segments
+    parameters:
+      - name: bucket
+        in: path
+        required: true
+        schema:
+          $ref: 'shared.yaml#/schemas/bucket'
+      - name: view_context
+        in: path
+        required: true
+        schema:
+          type: string
+          enum:
+            - comments
+            - crm
+            - documents
+            - events
+            - forms
+            - giving
+            - membership
+            - minimal_membership_directory
+            - reservations
+            - teams
+            - vehicles
+    responses:
+      '200':
+        description: |
+          The segments for the specified view context
+        content:
+          application/json:
+            schema:
+              $ref: '#/responses/all'
+      '400':
+        description: Bad request error
+        content:
+          application/json:
+            schema:
+              $ref: 'shared.yaml#/responses/error'
+      '401':
+        description: Authentication error
+
+SegmentAllExcel:
+  get:
+    operationId: segmentAllExcel
+    summary: Segment - Excel export
+    description: |
+      Export an Excel report based on the data from the segment
+    tags:
+      - Segments
+    parameters:
+      - name: bucket
+        in: path
+        required: true
+        schema:
+          $ref: 'shared.yaml#/schemas/bucket'
+      - name: uid
+        in: path
+        required: true
+        schema:
+          $ref: 'shared.yaml#/schemas/uid'
+      - name: template
+        in: query
+        required: false
+        schema:
+          type: string
+    responses:
+      '200':
+        description: |
+          A 'receipt' for the Excel report request
+        content:
+          application/json:
+            schema:
+              $ref: '#/responses/requestReport'
+      '400':
+        description: Bad request error
+        content:
+          application/json:
+            schema:
+              $ref: 'shared.yaml#/responses/error'
+      '401':
+        description: Authentication error
+
+SegmentActionReplace:
+  post:
+    operationId: segmentActionReplace
+    summary: Segment - Replace Records
+    description: |
+      Creates a new resultset from the segment and replaces all records within it.
+      This is an asynchronous operation that returns a notification URI to track progress.
+    tags:
+      - Segments
+    parameters:
+      - name: bucket
+        in: path
+        required: true
+        schema:
+          $ref: 'shared.yaml#/schemas/bucket'
+      - name: uid
+        in: path
+        required: true
+        schema:
+          $ref: 'shared.yaml#/schemas/uid'
+      - name: rules
+        in: query
+        required: false
+        schema:
+          type: object
+          description: Additional rules to filter the segment before replacement
+      - name: safe_mode
+        in: query
+        required: false
+        schema:
+          type: boolean
+          description: Whether to run in safe mode (additional validation checks)
+      - name: batch_size
+        in: query
+        required: false
+        schema:
+          type: integer
+          default: 100
+          maximum: 2500
+          description: Number of records to process in each batch
+      - name: verbose
+        in: query
+        required: false
+        schema:
+          type: boolean
+          description: Whether to return detailed progress information
+    responses:
+      '200':
+        description: |
+          Successfully initiated bulk replace operation
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                notification_uri:
+                  $ref: 'shared.yaml#/schemas/uri'
+                  description: URI of the notification that will track replace progress
+                lambda_params:
+                  type: object
+                  properties:
+                    uri:
+                      $ref: 'shared.yaml#/schemas/uri'
+                    rules:
+                      type: object
+                    safe_mode:
+                      type: boolean
+                    batch_size:
+                      type: integer
+      '400':
+        description: Bad request error
+        content:
+          application/json:
+            schema:
+              $ref: 'shared.yaml#/responses/error'
+            example:
+              error:
+                param: batch_size
+                message: Batch size must be less than 2500
+      '401':
+        description: Authentication error
 
 responses:
   action:
