--- a/toc.yaml
+++ b/toc.yaml
@@ -56,10 +56,10 @@ paths:
   /api/v2{bucket}/member/{uid}/detail:
     $ref: 'requests/Member.yaml#/MembershipDetail'
 
-  /api/v2/{bucket}/audit:
+  /audit/v2/{bucket}/audit:
     $ref: 'requests/Audit.yaml#/Audit'
 
-  /api/v2/{bucket}/{resource_type}/{uid}/audit:
+  /audit/v2/{bucket}/{resource_type}/{uid}/audit:
     $ref: 'requests/Audit.yaml#/AuditSingle'
 
   /api/v2/{bucket}/{resource_type}/{uid}/provenance:
